# blackhole-simulation

./: CMakeLists.txt
src/: constants.h  main.cpp  ray.h  shader.h
